# ChangeLog for net-misc/whois
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-misc/whois/ChangeLog,v 1.8 2002/12/13 11:00:15 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*whois-4.5.33 (21 Nov 2002)

  21 Nov 2002; Hannes Mehnert <hannes@gentoo.org> whois-4.5.33.ebuild,
  files/digest-whois-4.5.33: version bump

*whois-4.5.31 (31 Oct 2002)

  31 Oct 2002; Hannes Mehnert <hannes@gentoo.org> whois-4.5.31.ebuild,
  files/digest-whois-4.5.31: version bump

*whois-4.5.28-r1 (1 Jul 2002)

  01 Jul 2002; Seemant Kulleen <seemant@gentoo.org> whois-4.5.28-r1.ebuild
  files/digest-whois-4.5.28-r1 :

  NLS fixes (bloat reduction)

*whois-4.5.28 (25 Jun 2002)

  09 Jul 2002; phoen][x <phoenix@gentoo.org> whois-4.5.28.ebuild :
  Added KEYWORDS.

  25 Jun 2002; Thilo Bangert <bangert@gentoo.org> whois-4.5.28.ebuild :
  version bump - added SLOT


*whois-4.5.8 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.