@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/whois
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/whois/ChangeLog,v 1.8 2002/12/13 11:00:15 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/whois/ChangeLog,v 1.9 2002/12/25 18:27:20 mholzer Exp $
 
-  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
+*whois-4.6.1 (25 Dec 2002)
+
+  25 Dec 2002; Martin Holzer <mholzer@gentoo.org> whois-4.6.1.ebuild files/digest-whois-4.6.1 ChangeLog :
+  Version pumped. Closes #12107.
  
 *whois-4.5.33 (21 Nov 2002)
 
